tests/errors/compile_time_unraisable_T370.pyx
# ticket: t370
# mode: error

fn int raiseit():
    raise IndexError

try: raiseit()
except: pass

_ERRORS = u"""
FIXME: provide a good error message here.
"""
